<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lie detector prank</string>
    <string name="action_settings">Settings</string>
    <string name="choiselanguage">Choise\nlanguage</string>
    <string name="title_name">Lie detector\nprank</string>
    <string name="company_name" translatable="false">Wildleaf studio</string>
    <string name="title_choice_type_of_test">Choice type of test</string>
    <string name="title_activity_begin_test" translatable="false">BeginTest</string>
    <string name="begintest_title_voice">Press start\nto begin\nvoice test</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="begintest_title_photo">Take a picture of the testee</string>
    <string name="checkphoto">Check</string>
    <string name="begintest_title_handprint">Type text and check it</string>
    <string name="begintest_title_fingerprint">Hold your finger on scanner</string>
    <string name="processing">Processing</string>
    <string name="until_we_done">Wait a few seconds until we done</string>
    <string name="title_activity_processing" translatable="false">Precessing</string>
    <string name="human_on_this_picture_tells">Human on this picture tells</string>
    <string name="the_man_whose_voice_recorded_tells">The man whose voice recorded tells</string>
    <string name="the_man_who_wrote_the_text_tells">The man who wrote the text tells</string>
    <string name="the_man_who_scanned_fingerprint_tells">The man who scanned fingerprint tells</string>
    <string name="test_result_true">True</string>
    <string name="test_result_lie">Lie</string>
    <string name="percentage">Percentage:</string>
    <string name="percentage_example" translatable="false">40%</string>
    <string name="try_again">Try\nagain</string>
    <string name="back_to_menu">Back to\nmenu</string>
    <string name="sound_off">Sound off</string>
    <string name="sound_on">Sound on</string>
    <string name="supportemail" translatable="false">support@wildleaf.ru</string>
    <string name="write">Write</string>
    <string name="linktomarket" translatable="false">market://details?id=</string>
    <string name="options">Options</string>
    <string name="notifications">Notifications</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choise_language">Choice language</string>
    <string name="license_word">License</string>
    <string name="license_url">https://creativecommons.org/licenses/by-nc-sa/4.0/</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="license_title">Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)</string>
    <string name="checkyourfriend">Check your friend</string>
</resources>
